--- a/index.html
+++ b/index.html
@@ -11,17 +11,34 @@
 
     <style>
         * {
-            box-sizing: border-box;
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
 
-        video {
+        body {
+            text-align: center;
+            background: #f2f6f8;
+        }
+
+        img {
             position: absolute;
             z-index: 1;
         }
 
-        canvas {
+        #container {
+            display: inline-block;
+            width: 612px;
+            height: 612px;
+            margin: 0 auto;
+            background: black;
+            position: relative;
+            border: 5px solid black;
+            border-radius: 10px;
+            box-shadow: 0 5px 50px #333
+        }
+
+        #canvas {
             position: relative;
             z-index: 20;
         }
@@ -29,12 +46,13 @@
 </head>
 
 <body>
-    <div style="position: relative">
-        <video onloadedmetadata="onPlay(this)" id="inputVideo" autoplay muted playsinline></video>
-        <canvas id="overlay">
+
+    <div id="container">
+        <img src="./public/images/image3.jpg" id="image">
+        <canvas id="canvas" width="612" height="612"></canvas>
     </div>
 
-    <script src="./public/js/script_webcam.js"></script>
+    <script src="./public/js/script.js" type="module"></script>
 </body>
 
 </html>
