--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="/JohnTenno/public/js/face-api.min.js"></script>
+    <script src="ReconocimientoFacial/js/face-api.min.js"></script>
 
     <style>
         * {
@@ -48,11 +48,11 @@
 <body>
 
     <div id="container">
-        <img src="/JohnTenno/images/image3.jpg" id="image">
+        <img src="ReconocimientoFacial/public/images/image3.jpg" id="image">
         <canvas id="canvas" width="612" height="612"></canvas>
     </div>
 
-    <script src="/JohnTenno/js/script.js" type="module"></script>
+    <script src="ReconocimientoFacial/js/script.js" type="module"></script>
 </body>
 
 </html>
