--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <canvas id="overlay">
     </div>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/script_webcam.js"></script>
 </body>
 
 </html>
