--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Face Detection</title>
 
     <script src="./js/face-api.min.js"></script>
 
@@ -14,24 +14,86 @@
             box-sizing: border-box;
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif;
+        }
+        
+        body {
+            background: linear-gradient(135deg, #6a11cb, #2575fc);
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        #container {
+            position: relative;
+            width: 80%;
+            max-width: 800px;
+            border: 5px solid white;
+            border-radius: 10px;
+            overflow: hidden;
+            background: rgba(0, 0, 0, 0.2);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
 
         video {
-            position: absolute;
-            z-index: 1;
+            width: 100%;
+            height: auto;
+            display: block;
         }
 
         canvas {
-            position: relative;
-            z-index: 20;
+            position: absolute;
+            width: 100%;
+            height: auto;
+            border: 2px solid red;
+        }
+
+        #loading {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            z-index: 10;
+        }
+
+        .spinner {
+            border: 4px solid rgba(255, 255, 255, 0.2);
+            border-top: 4px solid white;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            animation: spin 1s linear infinite;
+            margin: 0 auto;
+        }
+
+        @keyframes spin {
+            from {
+                transform: rotate(0deg);
+            }
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        #loading p {
+            margin-top: 10px;
+            font-size: 1rem;
         }
     </style>
 </head>
 
 <body>
-    <div style="position: relative">
-        <video onloadedmetadata="onPlay(this)" id="inputVideo" autoplay muted playsinline></video>
-        <canvas id="overlay">
+    <div id="container">
+        <div id="loading">
+            <div class="spinner"></div>
+            <p>Cargando modelos...</p>
+        </div>
+        <video id="inputVideo" autoplay muted playsinline></video>
+        <canvas id="overlay"></canvas>
     </div>
 
     <script src="./js/script_webcam.js"></script>
